--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -57,7 +57,7 @@
     <string name="X_btn_customize">Personnaliser…</string>
     <string name="X_btn_do_not_show_again">Ne plus montrer</string>
     <string name="X_btn_show_list">Afficher la liste</string>
-    <string name="confirm_continue">Es-tu sur de vouloir continuer ?</string>
+    <string name="confirm_continue">Es-tu sur de vouloir continuer ?</string>
     <string name="X_error_authentication_failed">Authentification échouée</string>
     <string name="X_error_download_failed">Échec du téléchargement</string>
     <string name="error_record_must_contain_column">L’enregistrement doit contenir un champ nommé «%1$s».</string>
@@ -179,22 +179,23 @@
     <string name="cd_clear_text_end_icon">Effacer le texte</string>
     <string name="lbl_certificate_issued_by">Émis par : %1$s</string>
     <string name="lbl_certificate_issued_to">Délivré à : %1$s</string>
-    <string name="confirm_delete_book">Cela effacera totalement le livre intitulé «%1$s» par %2$s.\n\nÊtes vous sûr de vouloir poursuivre ?</string>
+    <string name="confirm_delete_book">Cela effacera totalement le livre intitulé «%1$s» par %2$s.\n\nÊtes vous sûr de vouloir poursuivre ?</string>
     <string name="confirm_delete_bookshelf" tools:ignore="TypographyQuotes">Supprimer l’étagère «%1$s» ? Les livres eux-mêmes ne seront pas supprimés. Ils seront toujours présents sur toutes les autres étagères, ou sur l’étagère «%2$s».</string>
-    <string name="confirm_delete_publisher" tools:ignore="TypographyQuotes">Supprimer l’éditeur «%1$s» ?\n\nLes livres eux-mêmes ne seront pas supprimés.\n\nEnvisagez de modifier l’éditeur et de remplacer le nom pour conserver ces données.</string>
-    <string name="confirm_delete_series">Supprimer la série «%1$s» ?\n\nLes livres eux-mêmes ne seront pas supprimés.\n\n Envisagez de modifier la série et d’en changer le nom pour conserver ces données.</string>
+    <string name="confirm_delete_publisher"
+            tools:ignore="TypographyQuotes">Supprimer l’éditeur «%1$s» ?\n\nLes livres eux-mêmes ne seront pas supprimés.\n\nEnvisagez de modifier l’éditeur et de remplacer le nom pour conserver ces données.</string>
+    <string name="confirm_delete_series">Supprimer la série «%1$s» ?\n\nLes livres eux-mêmes ne seront pas supprimés.\n\n Envisagez de modifier la série et d’en changer le nom pour conserver ces données.</string>
     <string name="confirm_delete_style">Supprimer le style «%1$s» ?</string>
     <string name="confirm_delete_toc_entry_everywhere">Vraiment supprimer le titre «%1$s» (par %2$s) ? Il sera supprimé de tous les livres dans lesquels il est répertorié. Les livres eux-mêmes ne seront pas supprimés.</string>
-    <string name="confirm_duplicate_book_message">Le livre que vous tentez d’ajouter existe déjà dans la base de donnnées. Êtes vous certain de vouloir en ajouter une nouvelle copie ?</string>
+    <string name="confirm_duplicate_book_message">Le livre que vous tentez d’ajouter existe déjà dans la base de donnnées. Êtes vous certain de vouloir en ajouter une nouvelle copie ?</string>
     <string name="confirm_email_file">Souhaitez-vous envoyer ce fichier par e-mail à quelqu’un ?</string>
     <string name="confirm_merge_authors">L’auteur que vous renommez existe déjà. Voulez-vous les fusionner ?</string>
     <string name="confirm_merge_bookshelves">La bibliothèque que vous renommez existe déjà. Voulez-vous les fusionner ?</string>
     <string name="confirm_merge_publishers">La bibliothèque que vous renommez existe déjà. Voulez-vous les fusionner ?</string>
     <string name="confirm_merge_series">L’éditeur que vous renommez existe déjà. Voulez-vous les fusionner ?</string>
-    <string name="confirm_overwrite_cover">Les champs sélectionnés vont être mis à jour tels que montré ; en option, les couvertures peuvent être téléchargées pour tous les livres.\n\nVoulez-vous remplacer toutes les couvertures existantes ? Attention, cela peut prendre du temps.</string>
-    <string name="confirm_rebuild_fts">Les données de l’index de recherche seront reconstruites au redémarrage de l’application. Es-tu sur de vouloir continuer ?</string>
-    <string name="confirm_rebuild_index">Les index seront reconstruits au redémarrage de l’application. Es-tu sur de vouloir continuer ?</string>
-    <string name="confirm_rebuild_orderby_columns">Cela reconstruira les données de tri au redémarrage de l’application. Es-tu sur de vouloir continuer ?</string>
+    <string name="confirm_overwrite_cover">Les champs sélectionnés vont être mis à jour tels que montré ; en option, les couvertures peuvent être téléchargées pour tous les livres.\n\nVoulez-vous remplacer toutes les couvertures existantes ? Attention, cela peut prendre du temps.</string>
+    <string name="confirm_rebuild_fts">Les données de l’index de recherche seront reconstruites au redémarrage de l’application. Es-tu sur de vouloir continuer ?</string>
+    <string name="confirm_rebuild_index">Les index seront reconstruits au redémarrage de l’application. Es-tu sur de vouloir continuer ?</string>
+    <string name="confirm_rebuild_orderby_columns">Cela reconstruira les données de tri au redémarrage de l’application. Es-tu sur de vouloir continuer ?</string>
     <string name="confirm_registration_benefits">Cette fonctionnalité bénéficie d’une inscription avec %1$s. Souhaitez-vous avoir plus d’informations ou désactiver ce message ?\nVous trouverez ces informations ultérieurement dans la section «%2$s» des paramètres.</string>
     <string name="confirm_registration_required">Cette fonctionnalité nécessite une inscription avec %1$s. Souhaitez-vous avoir plus d’informations ?</string>
     <string name="confirm_remove_toc_entry">Supprimer le titre «%1$s» par %2$s de ce livre ?</string>
@@ -690,7 +691,7 @@
     <string name="vldt_read_start_after_end">La date de début de lecture est après la date de fin</string>
     <string name="vldt_real_expected_for_x">Valeur décimale attendue pour «%1$s»</string>
     <string name="warning_already_in_list">Déjà dans la liste !</string>
-    <string name="warning_backup_request">Voulez-vous sauvegarder votre base de données sur la carte SD ?</string>
+    <string name="warning_backup_request">Voulez-vous sauvegarder votre base de données sur la carte SD ?</string>
     <string name="warning_book_not_always_found">Pas tous les sites ont renvoyé de données valides.</string>
     <string name="warning_book_not_found">Impossible de trouver le livre demandé.</string>
     <string name="warning_cannot_delete_1st_bs">Impossible de supprimer la première bibliothèque.</string>
@@ -733,16 +734,16 @@
     <string name="debug_select_items">Sélectionnez ce que vous souhaitez inclure :</string>
     <string name="lbl_author_is_a_pen_name_of">C’est un pseudonyme de :</string>
     <string name="vldt_real_author_must_be_valid">Doit être vide ou un auteur existant</string>
-    <string name="confirm_create_real_author">«%1$s» n’existe pas encore. Faut-il les créer ?</string>
+    <string name="confirm_create_real_author">«%1$s» n’existe pas encore. Faut-il les créer ?</string>
     <string name="pt_search_resolve_authors_bedetheque">Résoudre les pseudonymes des auteurs à l’aide du site Web Bedetheque</string>
     <string name="pt_bedetheque_search_resolve_formats">Conserver la dénomination au format Bedetheque</string>
-    <string name="confirm_no_missing_covers_search_from_top">Tous les livres en dessous de cette rangée ont des couvertures. Rechercher à nouveau à partir du haut ?</string>
+    <string name="confirm_no_missing_covers_search_from_top">Tous les livres en dessous de cette rangée ont des couvertures. Rechercher à nouveau à partir du haut ?</string>
     <string name="info_all_books_have_covers">Tous les livres de cette bibliothèque ont des couvertures</string>
     <string name="book_format_hardcover_oblong">Relié - oblongue</string>
     <string name="book_format_softcover_oblong">Broché - oblongue</string>
     <string name="lbl_purge_blns">Effacer l’état du nœud</string>
     <string name="info_purge_blns_all">Effacer l’état du nœud de toutes les listes</string>
-    <string name="info_purge_blns_item_name">Effacer l’état du nœud de %1$s «%2$s» ?</string>
+    <string name="info_purge_blns_item_name">Effacer l’état du nœud de %1$s «%2$s» ?</string>
     <string name="error_updates_aborted">Mises à jour annulées</string>
     <string name="lbl_country">Pays</string>
     <string name="lbl_strip_info_mapped_bookshelf_wishlist">Bibliothèque assignée à votre liste de souhaits</string>
