--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -56,7 +56,7 @@
     <string name="X_btn_customize">Configurar…</string>
     <string name="X_btn_do_not_show_again">No volver a mostrar</string>
     <string name="X_btn_show_list">Mostrar lista</string>
-    <string name="confirm_continue">Estás seguro de que quieres continuar?</string>
+    <string name="confirm_continue">¿Estás seguro de que quieres continuar?</string>
     <string name="X_error_authentication_failed">Autenticación fallida</string>
     <string name="X_error_download_failed">Descarga fracasó</string>
     <string name="error_record_must_contain_column">El registro debe contener un campo llamado %1$s.</string>
@@ -178,7 +178,7 @@
     <string name="cd_clear_text_end_icon">Borrar texto</string>
     <string name="lbl_certificate_issued_by">Emitido por: %1$s</string>
     <string name="lbl_certificate_issued_to">Emitido para: %1$s</string>
-    <string name="confirm_delete_book">Se dispone a eliminar el libro con el título «%1$s» de %2$s.\n\n ¿Está seguro de que desea continuar?</string>
+    <string name="confirm_delete_book">Se dispone a eliminar el libro con el título «%1$s» de %2$s.\n\n¿Está seguro de que desea continuar?</string>
     <string name="confirm_delete_bookshelf">¿Realmente eliminar la estantería «%1$s»? Los libros en sí no se eliminarán. Seguirán estando presentes en cualquier otro estante o en el estante «%2$s».</string>
     <string name="confirm_delete_publisher">¿Eliminar realmente el editor «%1$s»?\n\nLos libros en sí no se eliminarán.\n\nConsidere editar el editor y cambiar el nombre del editor por el de otro editor para conservar estos datos.</string>
     <string name="confirm_delete_series">¿Borrar la serie «%1$s»?
@@ -195,9 +195,9 @@
     <string name="confirm_merge_publishers">El editor al que está renombrando ya existe. ¿Te gustaría fusionarlos?</string>
     <string name="confirm_merge_series">Las series al que está renombrando ya existe. ¿Te gustaría fusionarlos?</string>
     <string name="confirm_overwrite_cover">Los campos seleccionados se actualizarán tal y como se muestra, pero las imágenes de portadas se pueden descargar, si lo desea, para TODOS los libros.\n\n¿Desea sobreescribir todas las portadas existentes? ¡Atención!, esto puede requerir un tiempo considerable.</string>
-    <string name="confirm_rebuild_fts">Los datos del índice de búsqueda se reconstruirán cuando se reinicie la aplicación. Estás seguro de que quieres continuar?</string>
-    <string name="confirm_rebuild_index">Los índices se reconstruirán cuando se reinicie la aplicación. Estás seguro de que quieres continuar?</string>
-    <string name="confirm_rebuild_orderby_columns">Esto reconstruirá los datos de clasificación cuando se reinicie la aplicación. Estás seguro de que quieres continuar?</string>
+    <string name="confirm_rebuild_fts">Los datos del índice de búsqueda se reconstruirán cuando se reinicie la aplicación. ¿Estás seguro de que quieres continuar?</string>
+    <string name="confirm_rebuild_index">Los índices se reconstruirán cuando se reinicie la aplicación. ¿Estás seguro de que quieres continuar?</string>
+    <string name="confirm_rebuild_orderby_columns">Esto reconstruirá los datos de clasificación cuando se reinicie la aplicación. ¿Estás seguro de que quieres continuar?</string>
     <string name="confirm_registration_benefits">Esta característica se beneficia del registro con %1$s. ¿Desea ver más información o deshabilitar este mensaje?\nPuede encontrar esta información más adelante en la sección «%2$s» en la configuración.</string>
     <string name="confirm_registration_required">Esta función requiere registro con %1$s. ¿Te gustaría ver más información?</string>
     <string name="confirm_remove_toc_entry">¿Eliminar el título «%1$s» de %2$s este libro?</string>
