--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <!--
   ~ @Copyright 2018-2023 HardBackNutter
   ~ @License GNU General Public License
@@ -17,7 +18,9 @@
   ~
   ~ You should have received a copy of the GNU General Public License
   ~ along with NeverTooManyBooks. If not, see <http://www.gnu.org/licenses/>.
-  --><!DOCTYPE resources [
+  -->
+
+<!DOCTYPE resources [
 <!ENTITY APP_NAME "NeverTooManyBooks">
 ]>
 <!-- Quotes „…”  - Regex to find wrong ones: ('|“|‘|’|«|») --><!--suppress LongLine --><resources>
@@ -711,7 +714,7 @@
     <string name="warning_immediate_global_changes">UWAGA: Wszystkie zapisane zmiany są globalne.</string>
     <string name="warning_import_csv">Uwaga! Zaimportowane dane mogą nadpisać istniejące, jeśli pokryje się identyfikator (pole _id). Jest to zwykle oczekiwane zachowanie, gdy edytowałeś wyeksportowany wcześniej plik. Jeśli dodajesz nową książkę, pozostaw pole _id puste.</string>
     <string name="warning_import_csv_unescaped_quote">Nieokreślony znak cytatu w wierszu %1$d, pozycja %2$d</string>
-    <string name="warning_import_failed_for_lines_lots">Analiza nie powiodła się dla linii \n%1$s\n i innych.</string>
+    <string name="warning_import_failed_for_lines_lots">Analiza nie powiodła się dla linii \n%1$s\n i %2$d innych.</string>
     <string name="warning_import_failed_for_lines_some">Analiza nie powiodła się dla linii \n%1$s\n</string>
     <string name="warning_no_editions">Brak wydań.</string>
     <string name="warning_no_matching_book_found">Nie znaleziono pasującej książki</string>
