--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -790,4 +790,10 @@
     <string name="pe_list">Список</string>
     <string name="pe_grid">Сетка</string>
     <string name="pt_bob_grid_spancount">Колонки сетки</string>
+    <!-- NOT APPLICABLE FOR BOOKS IN RUSSIAN; Just show "On"; it will still be used for other languages. -->
+    <string name="ps_show_titles_reordered_on">На сайте</string>
+    <!-- NOT APPLICABLE FOR BOOKS IN RUSSIAN; Just show "Off"; it will still be used for other languages. -->
+    <string name="ps_show_titles_reordered_off">С сайта</string>
+    <!-- NOT APPLICABLE FOR BOOKS IN RUSSIAN. Empty string. -->
+    <string name="pv_reformat_titles_prefixes">""</string>
 </resources>
