--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -748,7 +748,12 @@
     <string name="pt_search_show_shopping_options">Alışveriş menülerini göster</string>
     <string name="lbl_standardize">Standardize et</string>
     <string name="lbl_author_pseudonym_of_X">ta. %1$s</string>
-    <string name="ps_show_titles_reordered_off">Başlık</string>
+    <!-- NOT APPLICABLE FOR BOOKS IN TURKISH; Just show "On"; it will still be used for other languages. -->
+    <string name="ps_show_titles_reordered_on">Açık</string>
+    <!-- NOT APPLICABLE FOR BOOKS IN TURKISH; Just show "Off"; it will still be used for other languages. -->
+    <string name="ps_show_titles_reordered_off">Kapalı</string>
+    <!-- NOT APPLICABLE FOR BOOKS IN TURKISH. Empty string. -->
+    <string name="pv_reformat_titles_prefixes">""</string>
     <string name="lbl_original_title">Orijinal başlık</string>
     <string name="lbl_original_title_long">Bu kitap bir çeviriyse orijinal adı</string>
     <string name="error_site_access_blocked">Web sitesi tarafından erişim engellendi.</string>
